--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <meta property="og:image" content="https://paulcheney.github.io/1720-flags/images/opengraph.jpg">
     <meta property="og:logo" content="https://paulcheney.github.io/1720-flags/images/logo.svg" />
     <meta property="og:url" content="https://paulcheney.github.io/1720-flags">
-    <meta property="og:description" content="see all the flags of the world using a REST API">
-    <meta property="og:site_name" content="World Data from a REST API">
+    <meta property="og:description" content="See all 250 flags of the world using a REST API. You can also display by grid and list.">
+    <meta property="og:site_name" content="Flags from the World Data REST API">
 
     <!-- FAV ICON LINKS -->
     <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96" />
